--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "App.js",
   "scripts": {
+    "start":"node ./src/App.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
